Добавлены основные QML, пока пустые Создан компонент для поиска объектов на видео

--- a/fd_tester/qml.qrc
+++ b/fd_tester/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>demonstration/windows/MainWindow.qml</file>
+        <file>demonstration/main.qml</file>
     </qresource>
 </RCC>
