Добавлена возможность выделять объекты с помощью прямоугольника (можно вращать)

--- a/fd_tester/qml.qrc
+++ b/fd_tester/qml.qrc
@@ -6,5 +6,6 @@
         <file>demonstration/components/VideoControlBar.qml</file>
         <file>demonstration/views/RefLogGeneratorView.qml</file>
         <file>demonstration/windows/RefLogGeneratorWindow.qml</file>
+        <file>demonstration/components/StrobeDrawComponent.qml</file>
     </qresource>
 </RCC>
