Доработан компонент создания эталонных логов Создан компонент запоминания и хранения и запоминания файлов Создан компонент для поиска файлов в системе

--- a/fd_tester/qml.qrc
+++ b/fd_tester/qml.qrc
@@ -10,5 +10,6 @@
         <file>demonstration/windows/AlgorithmRunnerWindow.qml</file>
         <file>demonstration/views/AlgorithmRunnerView.qml</file>
         <file>demonstration/components/SmartVideoComponent.qml</file>
+        <file>demonstration/components/FileSelectionComponent.qml</file>
     </qresource>
 </RCC>
